--- a/style.css
+++ b/style.css
@@ -241,12 +241,12 @@ main {
 
 /* newsletter section */
 .newsletter-section {
-    width: 80%;
+    width: 70%;
     margin: auto;
     margin-top: 2.5rem;
     text-align: center;
     border-radius: 0.8rem;
-    padding: 1rem 5rem 5rem 2.5rem;
+    padding: 5rem;
     background-color: rgba(255, 0, 0, 0.096);
 }
 
